@@ -4,16 +4,15 @@ import dev.railroadide.railroad.ide.sst.ast.AstKind;
 import dev.railroadide.railroad.ide.sst.ast.AstNode;
 import dev.railroadide.railroad.ide.sst.ast.AstVisitor;
 import dev.railroadide.railroad.ide.sst.ast.Span;
-import dev.railroadide.railroad.ide.sst.ast.typeref.ClassOrInterfaceTypeRef;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 public record SuperExpression(
-        Span span
+        Span span,
+        Optional<Expression> qualifier
 ) implements Expression {
     @Override
     public AstKind kind() {
@@ -22,7 +21,9 @@ public record SuperExpression(
 
     @Override
     public List<AstNode> children() {
-        return Collections.emptyList();
+        List<AstNode> children = new ArrayList<>();
+        qualifier.ifPresent(children::add);
+        return List.copyOf(children);
     }
 
     @Override
